--- a/cookie-content.hbs
+++ b/cookie-content.hbs
@@ -26,7 +26,7 @@
 </style>
 
 <div id="filter-block">
-    Поиск cookie: <input type="text" id="filter-name-input" placeholder="имя cookie">
+    Поиск cookie: <input type="text" id="filter-name-input" placeholder="имя / значение">
 </div>
 <hr>
 <div id="add-block">
@@ -40,14 +40,14 @@
     Доступные cookie:
     <table id="list-table">
         <thead>
-        <tr>
-            <th>имя</th>
-            <th>значение</th>
-            <th>удалить</th>
-        </tr>
+            <tr>
+                <th>имя</th>
+                <th>значение</th>
+                <th>удалить</th>
+            </tr>
         </thead>
         <tbody>
-        <!-- tr добавлять сюда -->
+            <!-- tr добавлять сюда -->
         </tbody>
     </table>
 </div>
